# questfoundry-cli

./: CLI_REBUILD_PLAN.md  DEEP_DIVE_FINDINGS.md  DEEP_DIVE_SUMMARY.md  EPIC_7_PLAN.md  IMPLEMENTATION_PLAN_V2.md  INTERACTIVE_MODE_ANALYSIS.md  LICENSE  NEW_CLI_DESIGN.md  README.md  REFACTOR_OR_REWRITE.md  SPEC_VS_REALITY.md  UPSTREAM_INTERACTIVE_MODE_PROPOSAL.md  pyproject.toml
.claude/: README.md  conventional-commits.md  epic-5-pr-text.md  epic-workflow.md  instructions.md  pr-description-epic-10.md  pr-description-epic-5-updates.md  pr-description-epic-7.md  pr-description-epic-8.md  pr-description-epic-9.md  pr-description-template.md
.github/workflows/: lint.yml  test.yml
docs/: EPIC_6_INTEGRATION.md  LAYER_7_UPDATES_FOR_EPIC_7_8.md  QUESTFOUNDRY_PY_ANALYSIS.md  QUESTFOUNDRY_PY_UPSTREAM_FIX.md  QUESTFOUNDRY_PY_V0.3.0_UPDATE.md
src/qf/: __init__.py  cli.py  logging_config.py  version.py
src/qf/commands/: artifact.py  bind.py  check.py  config.py  diff.py  export.py  generate.py  history.py  init.py  list.py  provider.py  quickstart.py  run.py  schema.py  search.py  shell.py  show.py  status.py  validate.py
src/qf/completions/: __init__.py  dynamic.py
src/qf/data/: loops.yml
src/qf/formatting/: assets.py  iterations.py  loop_progress.py  loop_summary.py  progress.py  quickstart.py  showrunner.py
src/qf/interactive/: __init__.py  prompts.py  session.py
src/qf/templates/: config.yml
src/qf/utils/: __init__.py  commands.py  constants.py  formatting.py  project.py  providers.py  workspace.py
tests/: __init__.py  test_cli.py  test_commands.py
tests/commands/: __init__.py  conftest.py  test_bind.py  test_check.py  test_completion.py  test_config.py  test_diff.py  test_export.py  test_generate.py  test_history.py  test_init.py  test_list.py  test_provider.py  test_quickstart.py  test_run.py  test_search.py  test_shell.py  test_show.py  test_status.py  test_validate.py
tests/formatting/: __init__.py  test_loop_progress.py
tests/interactive/: __init__.py
