[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "questfoundry-cli"
dynamic = ["version"]
description = "Command-line interface for QuestFoundry"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Peter Liesdonk", email = "peter@liesdonk.nl"}]

dependencies = [
    "questfoundry-py>=0.5.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
# Provider support (OpenAI is most common, but users can choose)
openai = [
    "questfoundry-py[openai]>=0.4.0",
]

# All available providers
all-providers = [
    "questfoundry-py[all-providers]>=0.4.0",
]

# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "types-pyyaml>=6.0",
    "types-jsonschema>=4.0",
]

[project.scripts]
qf = "qf.cli:app"

[project.urls]
Homepage = "https://github.com/pvliesdonk/questfoundry-cli"
Documentation = "https://github.com/pvliesdonk/questfoundry-spec"
Specification = "https://github.com/pvliesdonk/questfoundry-spec"
Repository = "https://github.com/pvliesdonk/questfoundry-cli"

[tool.hatch.version]
source = "versioningit"

[tool.versioningit]
default-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/qf"]
artifacts = [
    "qf/data/*.yml",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Ignore missing type stubs for third-party libraries
[[tool.mypy.overrides]]
module = [
    "rich.*",
    "typer.*",
    "questionary.*",
    "yaml.*",
    "click.*",
    "questfoundry.*",  # v0.4.0 has partial stubs (models only), waiting for complete stubs
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["spec"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
